--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,7 +19,7 @@
 @import "main/c_global_panel";
 @import "main/c_sub_panel";
 @import "main/c_work_search";
-
+@import "main/c_work_list";
 // $Components
 @import "main/icon";
 
