--- a/src/styles/main/_c_sub_panel.scss
+++ b/src/styles/main/_c_sub_panel.scss
@@ -5,3 +5,9 @@
   width:$sub-panel-width;
 }
 
+
+// .sub-panel-header
+.sub-panel-header{
+  padding:20px 20px 14px 20px;
+  border-bottom:1px solid $gray-light;
+}
