--- a/src/styles/main/_variables.scss
+++ b/src/styles/main/_variables.scss
@@ -48,3 +48,6 @@ $icon-path:"../font/Simple-Line-Icons-Webfont/fonts/Simple-Line-Icons";
 $z-index-base:90;
 $z-index-small:9;
 $z-index-large:900;
+
+//search
+$work-search-height:34px;
