--- a/src/styles/_test.scss
+++ b/src/styles/_test.scss
@@ -1,17 +1,17 @@
-body{
-  height:2000px;
-}
-
-
-.sub-panel, .chat-area{
-  height:1000px;
-}
-
-.chat-content{
-  margin-top:207px;
-}
-
-.chat-send{
-  bottom:auto;
-  top:623px;
-}
+//body{
+//  height:2000px;
+//}
+//
+//
+//.sub-panel, .chat-area{
+//  height:1000px;
+//}
+//
+//.chat-content{
+//  margin-top:207px;
+//}
+//
+//.chat-send{
+//  bottom:auto;
+//  top:623px;
+//}
