--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,7 +20,7 @@
 @import "main/layout";
 
 // $Core CSS
-
+@import "main/c_button";
 // $Components
 @import "main/icon";
 @import "main/c_bubble";
