--- a/src/styles/main/_reset.scss
+++ b/src/styles/main/_reset.scss
@@ -349,3 +349,12 @@ h1, h2, h3, h4, h5, h6 {
 .typo img {
   max-width: 100%;
 }
+
+[contenteditable="true"]{
+  outline:none;
+}
+
+::selection{
+  background:$red-base;
+  color:#fff;
+}
