--- a/src/styles/main/_variables.scss
+++ b/src/styles/main/_variables.scss
@@ -5,6 +5,7 @@
 //== Colors
 $blue-base: #0099ff !default;
 $red-base: #ff3366 !default;
+$green-base:#24c05f !default;
 $gray-base: #000 !default;
 $gray-darker: #56646d !default;
 $gray-dark: #bec6d3 !default;
@@ -36,16 +37,51 @@ $line-height-base:        1.428571429 !default;
 // ## Define common padding and border radius sizes and more.
 $border-radius-base:3px !default;
 $border-radius-small: 2px !default;
-
+$border-radius-large:4px !default;
 
 $global-panel-width:100px !default;
 $sub-panel-width:300px !default;
 $chat-area-width:520px !default;
-
+$chat-area-max-width:520px !default;
 //family font path
 $font-family:$font-family-special !default;
 $icon-name: "Simple-Line-Icons";
 $icon-path:"../font/Simple-Line-Icons-Webfont/fonts/Simple-Line-Icons";
+
+//button
+$btn-default-color:              $gray-dark !default;
+$btn-default-bg:                 #fff !default;
+$btn-default-border:             $gray-light !default;
+$btn-font-weight:                normal !default;
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 $blue-base !default;
+$btn-primary-border:             $blue-base !default;
+
+$btn-success-color:              #fff !default;
+$btn-success-bg:                 $green-base !default;
+$btn-success-border:             $green-base !default;
+
+$btn-info-color:                 #fff !default;
+$btn-info-bg:                    $blue-base !default;
+$btn-info-border:                $blue-base !default;
+
+$btn-warning-color:              #fff !default;
+$btn-warning-bg:                 $red-base !default;
+$btn-warning-border:             $red-base !default;
+
+$btn-danger-color:               #fff !default;
+$btn-danger-bg:                  $red-base !default;
+$btn-danger-border:              $red-base !default;
+
+$btn-link-disabled-color:        $gray-light !default;
+
+
+$btn-border-radius-base:         $border-radius-base !default;
+$btn-border-radius-large:        $border-radius-large !default;
+$btn-border-radius-small:        $border-radius-small !default;
+
+//cursor
+$cursor-disabled:                not-allowed !default;
 
 // z-index
 $z-index-base:90;
@@ -62,3 +98,4 @@ $bubble-max-width: 380px;
 
 //chat-send
 $chat-send-height:175px;
+
