--- a/src/styles/main/_variables.scss
+++ b/src/styles/main/_variables.scss
@@ -35,9 +35,9 @@ $font-size-h6: 12px !default;
 $line-height-base:        1.428571429 !default;
 
 // ## Define common padding and border radius sizes and more.
-$border-radius-base:3px !default;
-$border-radius-small: 2px !default;
-$border-radius-large:4px !default;
+$border-radius-base:5px !default;
+$border-radius-small: 3px !default;
+$border-radius-large:20px !default;
 
 $global-panel-width:100px !default;
 $sub-panel-width:300px !default;
@@ -49,6 +49,34 @@ $icon-name: "Simple-Line-Icons";
 $icon-path:"../font/Simple-Line-Icons-Webfont/fonts/Simple-Line-Icons";
 
 //button
+$btn-default-height:40px !default;
+$btn-default-font:$font-size-base !default;
+$btn-default-padding-left:20px !default;
+$btn-default-border-radius:$border-radius-base !default;
+
+$btn-mi-height:25px !default;
+$btn-mi-font:$font-size-base !default;
+$btn-mi-padding-left:15px !default;
+$btn-mi-border-radius: $border-radius-small !default;
+
+$btn-sm-height:30px !default;
+$btn-sm-font:$font-size-base !default;
+$btn-sm-padding-left:20px !default;
+$btn-sm-border-radius: $border-radius-small !default;
+
+$btn-lg-height:50px !default;
+$btn-lg-font:18px !default;
+$btn-lg-padding-left:24px !default;
+$btn-lg-border-radius: $border-radius-base !default;
+
+$btn-ke-height:60px !default;
+$btn-ke-font:24px !default;
+$btn-ke-padding-left:28px !default;
+$btn-ke-border-radius: $border-radius-base !default;
+$btn-types: "mi" "sm" "default" "lg" "ke";
+$btn-border-width:1px !default;
+
+
 $btn-default-color:              $gray-dark !default;
 $btn-default-bg:                 #fff !default;
 $btn-default-border:             $gray-light !default;
