--- a/src/styles/main/mixins/_button.scss
+++ b/src/styles/main/mixins/_button.scss
@@ -1,9 +1,11 @@
 // Button sizes
-@mixin button-size($padding-vertical, $padding-horizontal, $font-size, $line-height, $border-radius) {
-  padding: $padding-vertical $padding-horizontal;
+@mixin button-size($height, $font-size, $line-height,  $padding-horizontal,  $border-radius) {
+
+
   font-size: $font-size;
-  line-height: $line-height;
   border-radius: $border-radius;
+  line-height: ($height - 2px);//get-btn-padding($height, $font-size, $line-height)
+  padding: 0 $padding-horizontal;
 }
 
 @mixin button-variant($color, $background, $border, $hover-color, $hover-background) {
