--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 
 // $Core CSS
 @import "main/c_button";
+@import "main/c_forms";
 // $Components
 @import "main/icon";
 @import "main/c_bubble";
@@ -30,7 +31,7 @@
 @import "main/c_work_search";
 @import "main/c_work_list";
 @import "main/_c_chat_area";
-
+@import "main/c_emotion";
 // $animation
 @import "main/animation";
 
