--- a/src/styles/main/_c_global_panel.scss
+++ b/src/styles/main/_c_global_panel.scss
@@ -16,6 +16,7 @@
   padding-top:19px;
   padding-bottom:19px;
   font-size:32px;
+  cursor:pointer;
   @extend %border-bottom;
 }
 .global-panel-logo{
