--- a/src/styles/main/_c_work_search.scss
+++ b/src/styles/main/_c_work_search.scss
@@ -1,32 +1,44 @@
 // work-searck
 
-.work-search{
-  border-radius:15px;
-  border:1px solid $gray-light;
-  height:$work-search-height;
-  width:218px;
-  background:$light-base;
-  color: $gray-light;
-}
+//.work-search{
+//  border-radius:15px;
+//  border:1px solid $gray-light;
+//  height:$work-search-height;
+//  width:218px;
+//  background:$light-base;
+//  color: $gray-light;
+//}
 
-.work-search-input{
-  border:0;
-  outline:none;
-  height:$work-search-height;
-  vertical-align:top;
-}
-.work-search-magnifier{
-  display: inline-block;
-  text-align:center;
-  line-height: $work-search-height !important;
-  width:20px;
-  padding-left:11px;
-  font-size:18px;
-}
-
+//.work-search-input{
+//  border:0;
+//  outline:none;
+//  height:$work-search-height;
+//  vertical-align:top;
+//}
+//.work-search-magnifier{
+//  display: inline-block;
+//  text-align:center;
+//  line-height: $work-search-height !important;
+//  width:20px;
+//  padding-left:11px;
+//  font-size:18px;
+//}
+//
 .sub-panel-header .btn-add{
   float:right;
   font-size:30px;
   line-height:$work-search-height;
   cursor:pointer;
+  color:$gray-dark;
+}
+
+//
+
+.work-search{
+  @include feedback(34px);
+  .form-c{
+    @include border-radius($border-radius-large);
+    width:212px;
+  }
+
 }
