--- a/src/styles/main/_mixins.scss
+++ b/src/styles/main/_mixins.scss
@@ -3,8 +3,9 @@
 */
 
 
-
+@import "mixins/common";
 @import "mixins/panel";
 @import "mixins/bubble";
 @import "mixins/button";
 @import "mixins/tab-focus";
+@import "mixins/form";
