change logo font-family

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,8 @@
 @import "main/c_button";
 @import "main/c_forms";
 // $Components
-@import "main/icon";
+//@import "main/_icon_simple";
+@import "main/icon_fontello";
 @import "main/c_bubble";
 @import "main/c_global_panel";
 @import "main/c_sub_panel";
