--- a/src/styles/main/mixins/_common.scss
+++ b/src/styles/main/mixins/_common.scss
@@ -5,3 +5,12 @@
 @mixin border($color){
   border:1px solid $color;
 }
+
+@mixin circle($width, $color, $background-color){
+  display:inline-block;
+  @extend %circle;
+  width:$width;
+  line-height:$width;
+  color:$color;
+  background-color:$background-color;
+}
