change chat area icon

--- a/src/styles/main/_c_chat_area.scss
+++ b/src/styles/main/_c_chat_area.scss
@@ -159,9 +159,9 @@
   i{
     width:29px;
   }
-  span{
-    vertical-align: 2px;
-  }
+  //span{
+  //  vertical-align: 2px;
+  //}
 }
 
 .chat-send-content{
